// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`given width 148 and offset 16, it returns framing info 1`] = `
{
  "cavityCount": 9,
  "cavityWidth": 14.5,
  "completeCavityCount": 8,
  "partialCavity": 8,
  "verticalStuds": 10,
}
`;

exports[`given width 48 and offset 16, it returns framing info 1`] = `
{
  "cavityCount": 3,
  "cavityWidth": 14.5,
  "completeCavityCount": 2,
  "partialCavity": 13,
  "verticalStuds": 4,
}
`;

exports[`given width 52 and offset 16, it returns framing info 1`] = `
{
  "cavityCount": 3,
  "cavityWidth": 14.5,
  "completeCavityCount": 2,
  "partialCavity": 17,
  "verticalStuds": 4,
}
`;

exports[`given width 288 and offset 16, it returns framing info 1`] = `
{
  "cavityCount": 17,
  "cavityWidth": 14.5,
  "completeCavityCount": 16,
  "partialCavity": 8,
  "verticalStuds": 18,
}
`;

exports[`given width 192 and offset 16, it returns framing info 1`] = `
{
  "cavityCount": 11,
  "cavityWidth": 14.5,
  "completeCavityCount": 10,
  "partialCavity": 17,
  "verticalStuds": 12,
}
`;

exports[`given width 96 and offset 16, it returns framing info 1`] = `
{
  "cavityCount": 6,
  "cavityWidth": 14.5,
  "completeCavityCount": 5,
  "partialCavity": 8.5,
  "verticalStuds": 7,
}
`;

exports[`given width 96 and offset 24, it returns framing info 1`] = `
{
  "cavityCount": 4,
  "cavityWidth": 22.5,
  "completeCavityCount": 3,
  "partialCavity": 19.5,
  "verticalStuds": 5,
}
`;
